--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Holy cow!"
+title: "Niklas Hess"
 ---
 
-### I have a webpage!
+### Welcome to my personal website
 
-Making some test changes here!
+For business or personal inquiries, please reach out via Email or LinkedIn
