--- a/about.Rmd
+++ b/about.Rmd
@@ -1,12 +1,9 @@
 ---
-title: "About"
+title: "ABOUT ME"
 ---
 
-### About this site
+### Academic and professional experience
 
-Sometimes you need to say a bit about the site -- how it was made, where it's hosted, where the source code can be found. 
-
-If this is for a project or analysis, I recommend giving some details about the R package versions that you used to create the content.
-
+For business or personal inquiries, please reach out via Email or LinkedIn
 
 <img src="images/Resume_NiklasHess.pdf" style="width:100%">
