--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -31,6 +31,7 @@ clean_noaa_df = ny_noaa %>%
          tmax = as.numeric(tmax)/10,
          tmin = as.numeric(tmin)/10,
          prcp = as.numeric(prcp)/10) %>%
+  filter(year %in% 2000:2010) %>%
   select(prcp, tmin, tmax, year, month_date, id) %>%
   drop_na(tmax, tmin, prcp) %>%
   sample_n(500)
@@ -44,11 +45,12 @@ Column {data-width=650}
 
 ```{r}
 month_temp = clean_noaa_df %>%
-    mutate(text_label = str_c("Tmax: ºC", tmax, "\nTmin: ºC", tmin),
-         ) %>% 
+  group_by(year, month_date) %>%
+  summarize(tmin = mean(tmin), tmax = mean(tmax)) %>%
+  mutate(text_label = str_c("Tmax: ºC ", tmax, "\nTmin: ºC ", tmin)) %>% 
   plot_ly(
-    x = ~month_date, y = ~tmax, type = "scatter", mode = "markers",
-    color = ~factor(year, ordered=TRUE), text = ~text_label, alpha = 0.5, colors = "viridis")
+    x = ~month_date, y = ~tmin, type = "scatter", mode = "lines",
+    color = ~factor(year, order = TRUE), text = ~text_label, alpha = 0.5, colors = "viridis")
 
 month_temp
 ```
@@ -59,11 +61,23 @@ Column {data-width=350}
 ### Chart B
 
 ```{r}
+max_temp = clean_noaa_df %>%
+  plot_ly(y = ~tmax, color = ~factor(year, ordered = TRUE), type = "box", colors = "viridis")
 
+max_temp
 ```
 
 ### Chart C
 
 ```{r}
+maxmin_plot = clean_noaa_df %>%
+  ggplot(aes(x = tmax, y = tmin, color = year)) +
+  geom_point() +
+  labs(title = "Max vs Min by year",
+       x = "Max Temp (C)",
+       y = "Min Temp (C)",
+       caption = "Data from NY NOAA.") +
+  theme(legend.position = "left")
 
+ggplotly(maxmin_plot)
 ```
